Add section on framing, media and party competition

--- a/paper/Manuscript.Rmd
+++ b/paper/Manuscript.Rmd
@@ -26,7 +26,7 @@ I test this argument using data from the German 2017 Bundestag campaign, during 
 
 # Issue Ownership Theory
 
-The classic formulation of issue ownership theory argues that parties 'own' issues when they are peceived as more competent handling the issue [@Budge1983]. If problem pressure on that issue increases and the issue rises to prominence, voters are more likely to base their voting decision on that issue and choose the party that is considered most able to deal with the issue. Over time, scholars have differentiated between this 'competence-based' and an 'associative' form of issue ownership. The latter emphasizes the process of voters' implicit and spontaneous association of an issue with a given party, thereby increasing the likelihood to vote for that party [@Lefevere2015b].
+The classic formulation of issue ownership theory argues that parties 'own' issues when they are peceived as more competent handling the issue [@Budge1983]. If the problem pressure regarding that issue increases and the issue rises to prominence, voters are more likely to base their voting decision on that issue and choose the party that is considered most able to deal with the issue. Over time, scholars have differentiated between this 'competence-based' and an 'associative' form of issue ownership. The latter emphasizes the process of voters' implicit and spontaneous association of an issue with a given party, thereby increasing the likelihood to vote for that party [@Lefevere2015b].
 
 Whichever the mechanism, both conceptualizations imply that parties perform better electorally when 'their' issue is on the top of the agenda, because voters either are more likely to perceive them as the most competent party in the current issue environment or because they are simply more likely to make it to the pool of options in a voters' mind:
 
@@ -128,13 +128,17 @@ More formally, this logic is expressed in the *value-expectancy framework* of at
 
 ## Emphasis Framing, the Media, and Party Competition
 
-How does the media play into this? And how does this translate in to voting behaviour?
+How does the media play into this? And how does this translate in to voting behaviour? The distinction of *frames in mind* and *frames in communication* is helpful [@Druckman2001]. *Frames in mind* describe the association mentioned above - a cognitive process where a given issue is associated with a specific consideration. *Frames in communication*, on the other hand, are located in political communication and are defined by the emphasis of one or several considerations in relation to an issue. Frames in communication change frames in mind by strengthening the association between an issue and a consideration, thereby affecting the cognitive definition of the issue and the resulting attitude towards this political issue. Hence, at least in theory, the media is able to change public opinion by emphasising different considerations about an issue.
 
+How do changing issue attitudes translate into support for political parties? Similar to issue ownership theory, the theory here assumes that voters are more likely to incorporate a given issue in their voting decision if that issue is currently in public debate. However, dependent on the considerations that dominate public debate about this issue, parties' positions will be more or less favored. To stick with the migration example: while issue ownership theory assumes that the salience of migration will *always* favor radical right parties as the owner of that issue, the proposed theory suggests that which party profits from the increased salience of migration is also dependent on the considerations salient in the debate. If migrant crime is the dominating consideration, surely a radical right parties' restrictive positions will be supported and voters will be inclined to vote for this party. If however humanitarian issues dominate the debate, voters' cognitive representation of the issue should lead them to welcome more liberal positions on immigration policy, which should favor the radical right less and parties with more left-leaning positions more.
 
-*Frame Competition Hypothesis: The more similar an issue's framing to a given parties' issue framing, the better that parties' electoral prospect.*
+Lastly, I should mention that I assume that parties emphasise issue considerations in line with their political positions. That does not necessarily entail rationality (instead of a strategic effort to substantiate their positions, parties might also hold certain policy positions because they emphasize certain considerations), but is a (weak) assumption that should be mentioned here. Given that parties promote issue considerations supporting their positions, I can assume that when the news media emphasises considerations about a salient issue similar to that of the party, this party should experience increasing electoral support:
 
-Different from Meguid salience X position model: it is the media, not the party that moves!!
+*Frame Competition Hypothesis: The more similar an medis's framing of an issue to a given parties' issue framing, the better that parties' electoral prospect.*
 
+One key difference compared to other models of party competition, especially the one described in @Meguid2009 is that in the present model, party positions are considered fixed, while it is the media debate that moves. Large shifts in parties' issue positions are generally rare [@SOURCE], but the media debate is in permanent flux, promoting a constantly changing set of issues and related considerations to voters. While the classic model described in @Meguid2009 views parties' electoral performance as a function of parties position and issue salience, the present model views their electoral performance as a function of issue salience and the similarity of the dominant set of issue considerations to the set of considerations emphasised by the party to substantiate its position:
+
+[insert formula]
 
 # Research Design
 
