--- a/paper/Manuscript.Rmd
+++ b/paper/Manuscript.Rmd
@@ -36,7 +36,7 @@ for (filename in list.files(here("code/functions"))){
 
 # Introduction
 
-One of the most prominent explanations for parties' electoral success in scholarly and public debate is the issue agenda at a given election: the more prominent an issue was among political parties, news media, and voters, the more it would influence the latter's electoral decision making. Certain issues are therefor more favorable to given parties and parties will try to focus on 'their' issues in public communication [@Budge1983; @Petrocik1996; @Walgrave2015]. In extension, it is assumed that the main form of electoral competition in contemporary Western European democracies is *issue competition*, in the sense that parties compete to bring 'their' issue on the agenda [@GreenPedersen2019].
+One of the most prominent explanations for parties' electoral success in scholarly and public debate is the issue agenda at a given election: the more prominent an issue was among political parties, news media, and voters, the more it would influence the latter's electoral decision making. Certain issues are therefor more favorable to given parties and parties will try to focus on 'their' issues in public communication [@Budge1983; @Petrocik1996; @Walgrave2012]. In extension, it is assumed that the main form of electoral competition in contemporary Western European democracies is *issue competition*, in the sense that parties compete to bring 'their' issue on the agenda [@GreenPedersen2019].
 
 The present paper sets out to challenge the truism of 'issue ownership' by looking into the debate *within* issues. Building on a large body of experimental work, I argue that - dependent on the relative emphasis of different considerations in public debate, also known as *emphasis framing* - any issue can be more or less favorable to a given party. As issues on the media agenda usually emerge externally [@Boydstun2013], issue ownership theory suggests that parties' electoral fate is statically bound to the media agenda of the day. My model of *frame competition* gives parties substantial agency by suggesting that competition takes not only place about *which* issues are talked about, but also *how*.
 
@@ -132,11 +132,11 @@ To be clear, I do not suggest that the salience of issues does not matter. Exist
 
 How could changing issue content be described in a theoretical model? The next section introduces the concept of emphasis framing and the value-expectancy model of preference formation. This theoretical framework allows me to formulate clear expectations about the impact of changing issue content on voting behaviour, as well as clarify the concepts to be operationalised.
 
-## The Value-Expenctancy Framework and Emphasis Framing
+## The Value-Expectancy Framework and Emphasis Framing
 
-What aspect of news content affect political preferences? Specifically, how can different considerations about the same issue affect one's reasoning and preferences regarding that issue? The large and established literature on framing has tackled precisely this question. To be clear, when I speak of "framing" in this manuscript, I refer to *emphasis framing*. Compared to concepts like equivalence frames (outlining different formulations of mathematically identical options; @Kahnemann1970), generic frames (portraying complex issues, e.g. elections within common and simplified metaphors, e.g. as a horse race; @DeVreese2005), or episodic frames (portraying issues through individual, personal stories; @Iyengar2005), emphasis framing focuses on the *emphasis* of different *considerations* surrounding an issue. For example, discussing the issue of migration, the debate can focus on the brutal reality of refugees' lifes and the hardships they face on their escape; or the discourse might focus on fears of the population in host countries and potential problems in the accommodation of refugees. The emphasis of different considerations will create different mental images which lead to differing assessments of the problem at hand, different preferences about the issue, and a different set of potential policy solutions.
+What aspect of news content affect political preferences? Specifically, how can different considerations about the same issue affect one's reasoning and preferences regarding that issue? The large and established literature on framing has tackled precisely this question. To be clear, when I speak of "framing" in this manuscript, I refer to *emphasis framing*. Compared to concepts like equivalence frames (outlining different formulations of mathematically identical options; @Kahneman1979prospect, generic frames (portraying complex issues, e.g. elections within common and simplified metaphors, e.g. as a horse race; @DeVreese2005), or episodic frames (portraying issues through individual, personal stories; @Iyengar2005), emphasis framing focuses on the *emphasis* of different *considerations* surrounding an issue. For example, discussing the issue of migration, the debate can focus on the brutal reality of refugees' lifes and the hardships they face on their escape; or the discourse might focus on fears of the population in host countries and potential problems in the accommodation of refugees. The emphasis of different considerations will create different mental images which lead to differing assessments of the problem at hand, different preferences about the issue, and a different set of potential policy solutions.
 
-More formally, this logic is expressed in the *value-expectancy framework* of attitude formation [@Ajzen2000; @Nelson1997]. An attitude towards a political issue is a function of two things in this model: first, different considerations contain a certain positive or negative evaluation of the issue (let's call this $e_i$). For example, thinking of how to deal with criminal refugees will entail a more restrictive assessment towards immigration policy (simplistically $e_1 = -1$), whereas reasoning about how to prevent the humanitarian tragedies in the Mediterranean sea should be associated with a more welcoming position ($e_2 = 1$). All available considerations are then weighted by the *strength of the association* with the issue. That is, if an individual associates the issue of migration more strongly with criminal migrants rather than drownings in the Mediterranean sea, they weigh the former consideration more strongly ($w_1 = 0.9$) than the second ($w_2 = 0.1$) to form their overall opinion on the issue. The overall attitude $y$ is then a weighted sum of each consideration ($\sum_{i = 1}{e_i*w_i}$), or in this case $-1*0.9 + 1*0.1 = -0.8$. Given the stronger weighting of the consideration of criminal migrants by the respondent, the overall formed attitude is a negative/restrictive one.
+More formally, this logic is expressed in the *value-expectancy framework* of attitude formation [@Ajzen2000; @Nelson1997Rally]. An attitude towards a political issue is a function of two things in this model: first, different considerations contain a certain positive or negative evaluation of the issue (let's call this $e_i$). For example, thinking of how to deal with criminal refugees will entail a more restrictive assessment towards immigration policy (simplistically $e_1 = -1$), whereas reasoning about how to prevent the humanitarian tragedies in the Mediterranean sea should be associated with a more welcoming position ($e_2 = 1$). All available considerations are then weighted by the *strength of the association* with the issue. That is, if an individual associates the issue of migration more strongly with criminal migrants rather than drownings in the Mediterranean sea, they weigh the former consideration more strongly ($w_1 = 0.9$) than the second ($w_2 = 0.1$) to form their overall opinion on the issue. The overall attitude $y$ is then a weighted sum of each consideration ($\sum_{i = 1}{e_i*w_i}$), or in this case $-1*0.9 + 1*0.1 = -0.8$. Given the stronger weighting of the consideration of criminal migrants by the respondent, the overall formed attitude is a negative/restrictive one.
 
 ## Emphasis Framing, the Media, and Party Competition
 
@@ -148,16 +148,54 @@ Lastly, I should mention that I assume that parties emphasise issue consideratio
 
 *Frame Competition Hypothesis: The more similar the media's framing of an issue to a given parties' issue framing, the better that parties' electoral prospect.*
 
-One key difference compared to other models of party competition, especially the one described in @Meguid2005 is that in the present model, party positions are considered fixed, while it is the media debate that moves. Large shifts in parties' issue positions are generally rare [@SOURCE], but the media debate is in permanent flux, promoting a constantly changing set of issues and related considerations to voters. Political actors sponsor frames and arguments, only some of which get to influence the debate. While the classic model described in @Meguid2005 views parties' electoral performance as a function of parties position and issue salience, the present model views their electoral performance as a function of issue salience and the similarity of the dominant set of issue considerations to the set of considerations emphasised by the party to substantiate its position.
+One key difference compared to other models of party competition, especially the one described in @Meguid2005 is that in the present model, party positions are considered fixed, while it is the media debate that moves. Large shifts in parties' issue positions are generally rare [@SOURCE], but the media debate is in permanent flux, promoting a constantly changing set of issues and related considerations to voters. Political actors sponsor frames and arguments, only some of which get to influence the debate. While the classic model described in @Meguid2005 views parties' electoral performance as a function of parties position and issue salience, the present model views their electoral performance as a function of issue salience and the similarity of the dominant set of issue considerations to the set of considerations emphasized by the party to substantiate its position.
 
 # Research Design
 
-## The Migration Issue in the German Bundestagswahl 2017
+## The German *Bundestagswahl* 2017[^1]
 
-## Measuring Parties' Preferred Issue Framing
+[^1]: I am not entirely sure if it is smart to restrict myself to the 2017 campaign, as there should be more variation over time, especially moving from late 2015 to 2016, as described above. So far, this was a choice entirely made based on the use of the 2017 manifestos, but I might also combine the 2013 and 2017 manifestos and track the issue across time.
+
+In order to study whether framing can change parties' electoral prospects, an ideal case would show substantial variation surrounding the framing of an issue but little variation in parties' positions. Ideally, the variation in salience would be limited and uncorrelated to the variation of the framing. I choose the case of the election campaign for the German Bundestagswahl 2017 as I consider most of these criteria are met. After the refugee movements throughout Europe in 2015, voters considered migration the most important issue [@Wessels2021, p. 12], and the media still discussed the issue, but at lower levels compared to 2017 (see figure \@ref(fig:salplot)). I expect that events during the election campaign, such as migrant crimes, conflicts regarding the intra-EU distribution of refugees, international terrorism, humanitarian crises as those among the Rohingya in Myanmar, as well as drownings in the Mediterranean sea lead to substantial variation in the considerations regarding migration being discussed - the key independent variable.
+
+```{r salplot}
+
+fread(here("data/media/bert_crime_daily.csv")) %>% 
+  select(date_clean, mig_share) %>% 
+  mutate(date_new = lubridate::floor_date(date_clean, "month")) %>% 
+  group_by(date_new) %>% 
+  summarise_all(mean) %>% 
+  filter(date_new < as.Date('2018-01-01'),
+         date_new >= as.Date("2014-01-01")) %>%
+  ggplot(aes(x = date_new, y = mig_share)) +
+  geom_line() + geom_point() +
+  geom_vline(xintercept = as.Date("2017-09-24"), col = "red", lty = 2) +
+  ggtitle('Migration salience in print media', '2014-2017, red line indicates 2017 election') +
+  xlab('') + ylab('Share of migration articles') +
+  theme_minimal()
+
+```
+
+## Measuring Migration Framing in the Media
+
+How can such a diffuse concept as issue framing be measured? In order to identify different considerations in media coverage, I will use a two-step approach. After training a neural network (BERT) to classify migration content in news coverage (providing a measure of salience), I employ the structural topic model[^2] [@Roberts2019], to identify different topics being raised *within* migration coverage. This model allows to specify covariates, such as different prevalence of frames across newspapers. The topic model might for example identify topics like crime, terrorism, refugee deaths, and the distribution of refugees. Each of these topics represents a consideration about migration, which will have implications for the evaluation of the issue.
+
+[^2]: At this point, I am not sure if I might not instead use a simple LDA.
+
+The topic model then returns a topic vector for each news article, representing the distribution of topics in each article. For example, an article might talk to 90% about crime and 10% about the distribution of refugees, whereas it does not mention refugee deaths or terrorism. In this hypothetical four-topic space, the article would then be represented by a $[0.9, 0.1, 0, 0]$ vector, much like an embedding.
 
 ## Measuring Frame Similarity
 
+In order to avoid making assumptions about the favorability of different considerations for different parties, I exploit this embedding-like structure of topic vectors to assess their similarity to party communication. The assumption I make instead is that party positions on migration are stable across the campaign, and that parties emphasize considerations supporting their position on the issue of migration. To measure the emphasis of different considerations in party communication, I select all paragraphs from parties' election manifestos in the 2017 election that are concerned with migration. For each party, I generate a topic vector using the model described in section, based on the collection of all relevant paragraphs \@ref(measuring-migration-framing-in-the-media).
+
+Now, using these party-framing vectors, *I can assess the similarity of each news article towards each party's migration framing, simply by taking the cosine distance to the party's vector*. This way, it is possible to track the similarity of the media framing of migration to each party, in order to test the frame competition hypothesis: whether parties perform better when the media framing of migration is more similar to their own framing. This could well be done with document embeddings as well, however topic vectors offer a key advantage here: other than the dimensions of a, say, 300-dimensional embedding model, the dimensions of topic-vectors are interpretable. This can serve as a sanity check (e.g. if increased attention to crime results in higher similarity to a left-wing party that supports extended immigration, this would suggest that the model is not great), as well as enrich the data analysis: if frame similarity has an effect on parties' electoral prospects, it is easy to see which topics drive this effect and how the media debate affected opinion polls.
+
 ## Estimating the Effect of Frame Similarity on Electoral Prospects
 
+As the above approach will provide me with time-series data on the similarity of the public debate surrounding migration to each parties' definition of migration, and given the time-series structure of the polling data (the dependent variable), it seems straightforward to use time-series modeling, and specifically vector-auto-regression (VAR) models[^3] [@Sims1980] to account for possible effects of the polls on media reporting about migration.
+
+[^3]: As I never used VAR models to model interaction effects, I am not entirely sure how to account for variation in salience here. It might still be possible to use split samples of periods with higher and lower salience, or restrict the analysis to a period with relatively stable attention to migration (e.g. just the election campaign).
+
 ## Instrumenting Frame Attention
+
+An additional possibility in order to improve causal identification was to use exogenous events like the new years eve in cologne, terrorist attacks abroad or drownings in the Mediterranean sea to instrument attention to specific topics. This idea has not far progressed, so I am curious about your thoughts on this.
