Fix running header

--- a/paper/preamble.tex
+++ b/paper/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\rhead{Framing Effects in the Wild}
+\rhead{Frame Competition}
 \lhead{Berk}
 \cfoot{\thepage}
